# plex-music-enhancer

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  RELEASE.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
assets/fonts/: README.md
docker/: entrypoint.sh
docs/: README.de.md  README.md  ai-generation.md  ai.md  apply.md  architecture.md  artists.md  backend-api.md  batch.md  cache.md  commands.md  configuration.md  content-quality.md  developer-mode.md  developer.md  docker.md  editorial.md  enrichment-pipeline.md  enrichment.md  faq.md  getting-started.md  glossary.md  installation.md  library-workflow.md  matching.md  musicbrainz.md  openai.md  performance.md  planner.md  planning.md  preview.md  prompts.md  quality.md  release-notes.md  review-system.md  review.md  translation.md  troubleshooting.md  verification.md  web-architecture.md  (+3 more)
docs/handbuch/: 00-titel.md  01-einleitung.md  09-provider.md  (+14 more)
exports/: capabilities.json
prompts/: album_improve.md  album_summary.md  album_translate.md  artist_biography.md  artist_summary.md
tests/: test_ai.py  test_album_reviews.py  test_api.py  test_apply.py  test_artist_planner.py  test_artist_workflow.py  test_audit.py  test_batch.py  test_batch_queue.py  test_cache.py  test_capabilities.py  test_cli.py  test_config.py  test_containerization.py  test_contracts.py  test_developer.py  test_editorial.py  test_editorial_style.py  test_enrichment.py  test_enrichment_context.py  test_inspector.py  test_knowledge.py  test_library_workflow.py  test_musicbrainz_matcher.py  test_packaging.py  test_performance.py  test_planner.py  test_plex_client.py  test_plex_sync.py  test_preview.py  test_probe.py  test_prompts.py  test_providers.py  test_quality.py  test_rest_api.py  test_review.py  test_scanner.py  test_translation.py  test_verification.py
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.setup.ts
(+521 files in other folders)
