[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "plex-music-enhancer"
version = "0.1.0"
description = "Production-grade tools for improving Plex music libraries."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "Plex Music Enhancer contributors" }]
keywords = ["plex", "music", "metadata", "cli"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dependencies = [
  "defusedxml>=0.7,<1.0",
  "httpx>=0.27,<1.0",
  "plexapi>=4.16,<5.0",
  "pydantic>=2.8,<3.0",
  "pydantic-settings>=2.3,<3.0",
  "PyYAML>=6.0,<7.0",
  "rich>=13.7,<14.0",
  "typer>=0.12,<1.0",
]

[project.optional-dependencies]
ai = [
  "openai>=1.0,<2.0",
]
dev = [
  "black>=24.4,<26.0",
  "pre-commit>=3.7,<5.0",
  "pytest>=8.2,<9.0",
  "pytest-cov>=5.0,<8.0",
  "pytest-httpx>=0.30,<1.0",
  "ruff>=0.5,<1.0",
]
metadata = [
  "beautifulsoup4>=4.12,<5.0",
  "lxml>=5.2,<6.0",
]

[project.scripts]
plex-enhancer = "plex_music_enhancer.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/plex_music_enhancer"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py312"

[tool.ruff.lint]
select = [
  "B",
  "C4",
  "D",
  "E",
  "F",
  "I",
  "N",
  "S",
  "SIM",
  "UP",
  "W",
]
ignore = [
  "D203",
  "D213",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D", "S101"]

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["plex_music_enhancer"]

[tool.coverage.report]
show_missing = true
skip_covered = true
